Email/Fields Generator, initial version added
